fix: reveal random letter from username not only first